se agregan validaciones de categorias y nuevos campos en los modelos
