# docs/swagger.yaml
@@ -5,6 +5,8 @@ definitions:
         type: string
       name:
         type: string
+      type:
+        type: string
     type: object
   domain.Newsletter:
     properties:
@@ -21,9 +23,13 @@ definitions:
         type: string
       name:
         type: string
+      subject:
+        type: string
     type: object
   domain.Subscriber:
     properties:
+      category:
+        type: string
       email:
         type: string
       id:
